-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.7.0
-
None
-
3b901b25a86f49ebef9be03ec762ed76422fd91c
When downloading a file with an unknown size like http://httpbin.org/stream-bytes/1024 with QtWebEngine, downloadProgress gets emitted with 0 for bytesTotal.
This is kind of unexpected and different from QNetworkReply::downloadProgress where -1 is used for that purpose.
It's probably too late to change that behaviour now, but I think it should at least be documented.
For Gerrit Dashboard: QTBUG-56979 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
193070,3 | Doc: Add info to QWebEngineDownloadItem::downloadProgress docs | 5.9.0 | qt/qtwebengine | Status: MERGED | +2 | 0 |