Doc: Add info to QWebEngineDownloadItem::downloadProgress docs

The documentation was not very informative when compared with the
docs for the similar QNetworkReply::downloadProgress signal.

Task-number: QTBUG-56979
Change-Id: Icade60317a7b3fd8aaa37770c60ce8f4f947382b
Reviewed-by: Kai Koehne <kai.koehne@qt.io>