src/webenginewidgets/api/qwebenginedownloaditem.cpp
@@ -224,8 +224,12 @@ quint32 QWebEngineDownloadItem::id() const
 /*!
     \fn QWebEngineDownloadItem::downloadProgress(qint64 bytesReceived, qint64 bytesTotal)
 
-    This signal is emitted whenever the download's \a bytesReceived or
-    \a bytesTotal changes.
+    This signal is emitted to indicate the progress of the download request.
+
+    The \a bytesReceived parameter indicates the number of bytes received, while
+    \a bytesTotal indicates the total number of bytes expected to be downloaded.
+    If the size of the file to be downloaded is not known, \c bytesTotal will be
+    0.
 
     \sa totalBytes(), receivedBytes()
 */
